Add new section 'Services'

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <title>Moja pierwsza strona Git</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ysabeau:ital@0;1&display=swap" rel="stylesheet">       <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="vendor/bootstrap-grid/bootstrap-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -33,9 +32,44 @@
                     <h2 class="page-subtitle">Welcome To Our Studio!</h2>
                     <div id="red-line1"></div>
                     <h1 class="page-title">IT'S NICE TO MEET YOU</h1>
-                    <a href="#" class="btn">TELL ME MORE</a> 
+                    <a href="#" class="btn">TELL ME MORE</a>
                 </div>
             </div>
         </header>
+        <section class="delivery">
+            <div class="container">
+                <h2>SERVICES</h2>
+                <h6>Neque porro quisquam est qui</h6>
+                <div class="row d-flex">
+                    <div class="card col-md-3 p-3 m-3  ">
+                        <div class="card-body row">
+                            <div class="col-md-10">
+                                <i class="fa-solid fa-basket-shopping"></i>
+                                <h3 class="card-title">E-Commerce</h3>
+                                <p>Donec venenatis nisi facilisis, tempus mi sed, consectetur neque. Ut posuere est nec rhoncus ornare. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card col-md-3 p-3 m-3">
+                        <div class="card-body row">
+                            <div class="col-md-10">
+                                <i class="fa-solid fa-laptop-code"></i>
+                                <h3 class="card-title">Responsive Web</h3>
+                                <p>Nulla turpis tellus, auctor eget dapibus ut, mattis ullamcorper eros. Curabitur porttitor vulputate enim, sed.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card col-md-3 p-3 m-3">
+                        <div class="card-body row">
+                            <div class="col-md-10">
+                                <i class="fa-solid fa-lock"></i>
+                                <h3 class="card-title">Security</h3>
+                                <p>Nullam et lorem ante. Cras sit amet nisi mollis, posuere augue et, blandit ex. Vivamus. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
     </body>
 </html>
