Add new section 'Services'Our Portfolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </header>
-        <section class="delivery">
+        <section class="services">
             <div class="container">
                 <h2>SERVICES</h2>
                 <h6>Neque porro quisquam est qui</h6>
@@ -70,6 +70,74 @@
                     </div>
                 </div>
             </div>
-            </section>
+        </section>
+        <section class="portfolio">
+            <div class="container">
+                <h2>OUR PORTFOLIO</h2>
+                <h6>Neque porro quisquam est qui</h6>
+                <div class="row">
+                    <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
+                        <div class="overlay-card">
+                                <div class="row card-portf card-portf-1">
+                                    <a class="overlay-link" href="#">
+                                    <p><span class="overlay-gold-link">EBONY &amp; IVORY</span></p></a>
+                                </div>
+                        </div>
+                        <h3 class="card-title">Ebony &amp; Ivory</h3>
+                        <p>Donec venenatis</p>
+                    </div>
+                    <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
+                        <div class="overlay-card">
+                                <div class="row card-portf card-portf-2">
+                                    <a class="overlay-link" href="#">
+                                    <p><span class="overlay-gold-link">Smart Stationary</span></p></a>
+                                </div>
+                        </div>
+                            <h3 class="card-title">Smart Stationary</h3>
+                            <p>Nulla turpis </p>
+                    </div>
+                    <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
+                        <div class="overlay-card">
+                                <div class="row card-portf card-portf-3">
+                                    <a class="overlay-link" href="#">
+                                    <p><span class="overlay-gold-link">Clever Poster</span></p></a>
+                                </div>
+                        </div>
+                            <h3 class="card-title">Clever Poster</h3>
+                            <p>Nullam et </p>
+                    </div>
+                    <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
+                        <div class="overlay-card">
+                                <div class="row card-portf card-portf-4">
+                                    <a class="overlay-link" href="#">
+                                    <p><span class="overlay-gold-link">Vinyl Record</span></p></a>
+                                </div>
+                        </div>
+                            <h3 class="card-title">Vinyl Record</h3>
+                            <p>Donec venenatis </p>
+                    </div>
+                    <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
+                        <div class="overlay-card">
+                                <div class="row card-portf card-portf-5">
+                                    <a class="overlay-link" href="#">
+                                    <p><span class="overlay-gold-link">Treehouse Template</span></p></a>
+                                </div>
+                        </div>
+                            <h3 class="card-title">Treehouse Template</h3>
+                            <p>Nulla turpis </p>
+                    </div>
+                    <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
+                        <div class="overlay-card">
+                                <div class="row card-portf card-portf-6">
+                                    <a class="overlay-link" href="#">
+                                    <p><span class="overlay-gold-link">Burned Logo</span></p></a>
+                                </div>
+                        </div>
+                            <h3 class="card-title">Burned Logo</h3>
+                            <p>Nullam et </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
