--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Moja pierwsza strona Git</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Ysabeau:ital@0;1&display=swap" rel="stylesheet">       <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ysabeau:ital@0;1&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="vendor/bootstrap-grid/bootstrap-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -41,7 +42,7 @@
                 <h2>SERVICES</h2>
                 <h6>Neque porro quisquam est qui</h6>
                 <div class="row d-flex">
-                    <div class="card col-md-3 p-3 m-3  ">
+                    <div class="card-serv col-md-3 p-3 m-3  ">
                         <div class="card-body row">
                             <div class="col-md-10">
                                 <i class="fa-solid fa-basket-shopping"></i>
@@ -50,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-md-3 p-3 m-3">
+                    <div class="card-serv col-md-3 p-3 m-3">
                         <div class="card-body row">
                             <div class="col-md-10">
                                 <i class="fa-solid fa-laptop-code"></i>
@@ -59,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-md-3 p-3 m-3">
+                    <div class="card-serv col-md-3 p-3 m-3">
                         <div class="card-body row">
                             <div class="col-md-10">
                                 <i class="fa-solid fa-lock"></i>
@@ -78,60 +79,60 @@
                 <div class="row">
                     <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
                         <div class="overlay-card">
-                                <div class="row card-portf card-portf-1">
-                                    <a class="overlay-link" href="#">
-                                    <p><span class="overlay-gold-link">EBONY &amp; IVORY</span></p></a>
-                                </div>
+                            <div class="row card-portf card-portf-1">
+                                <a class="overlay-link" href="#">
+                                <p><span class="overlay-gold-link">EBONY &amp; IVORY</span></p></a>
+                            </div>
                         </div>
                         <h3 class="card-title">Ebony &amp; Ivory</h3>
                         <p>Donec venenatis</p>
                     </div>
                     <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
                         <div class="overlay-card">
-                                <div class="row card-portf card-portf-2">
-                                    <a class="overlay-link" href="#">
-                                    <p><span class="overlay-gold-link">Smart Stationary</span></p></a>
-                                </div>
+                            <div class="row card-portf card-portf-2">
+                                <a class="overlay-link" href="#">
+                                <p><span class="overlay-gold-link">Smart Stationary</span></p></a>
+                            </div>
                         </div>
                             <h3 class="card-title">Smart Stationary</h3>
                             <p>Nulla turpis </p>
                     </div>
                     <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
                         <div class="overlay-card">
-                                <div class="row card-portf card-portf-3">
-                                    <a class="overlay-link" href="#">
-                                    <p><span class="overlay-gold-link">Clever Poster</span></p></a>
-                                </div>
+                            <div class="row card-portf card-portf-3">
+                                <a class="overlay-link" href="#">
+                                <p><span class="overlay-gold-link">Clever Poster</span></p></a>
+                            </div>
                         </div>
                             <h3 class="card-title">Clever Poster</h3>
                             <p>Nullam et </p>
                     </div>
                     <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
                         <div class="overlay-card">
-                                <div class="row card-portf card-portf-4">
-                                    <a class="overlay-link" href="#">
-                                    <p><span class="overlay-gold-link">Vinyl Record</span></p></a>
-                                </div>
+                            <div class="row card-portf card-portf-4">
+                                <a class="overlay-link" href="#">
+                                <p><span class="overlay-gold-link">Vinyl Record</span></p></a>
+                            </div>
                         </div>
                             <h3 class="card-title">Vinyl Record</h3>
                             <p>Donec venenatis </p>
                     </div>
                     <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
                         <div class="overlay-card">
-                                <div class="row card-portf card-portf-5">
-                                    <a class="overlay-link" href="#">
-                                    <p><span class="overlay-gold-link">Treehouse Template</span></p></a>
-                                </div>
+                            <div class="row card-portf card-portf-5">
+                                <a class="overlay-link" href="#">
+                                <p><span class="overlay-gold-link">Treehouse Template</span></p></a>
+                            </div>
                         </div>
                             <h3 class="card-title">Treehouse Template</h3>
                             <p>Nulla turpis </p>
                     </div>
                     <div class="card-portf-body col-md-5 col-lg-3 offset-lg-0">
                         <div class="overlay-card">
-                                <div class="row card-portf card-portf-6">
-                                    <a class="overlay-link" href="#">
-                                    <p><span class="overlay-gold-link">Burned Logo</span></p></a>
-                                </div>
+                            <div class="row card-portf card-portf-6">
+                                <a class="overlay-link" href="#">
+                                <p><span class="overlay-gold-link">Burned Logo</span></p></a>
+                            </div>
                         </div>
                             <h3 class="card-title">Burned Logo</h3>
                             <p>Nullam et </p>
@@ -139,5 +140,16 @@
                 </div>
             </div>
         </section>
+        <footer class="page-footer">
+            <div class="foot">
+                <ul>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-facebook-f"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-google-plus-g"></i></li>
+                </ul>
+                <p>&copy;Copyright 2023 Kodilla Course.</p>
+            </div>
+        </footer>
     </body>
 </html>
